fix: fix horizontal line spacing issue below the navigation add: implement hyperlinks to every underlined text

--- a/index.css
+++ b/index.css
@@ -51,3 +51,12 @@ h1 {
     padding-left: 0px;
     padding-right: 350px;
 }
+
+a {
+    color:white;
+}
+
+hr {
+    margin-top:35px;
+    margin-bottom:35px;
+}
